Add LD_LIBRARY_PATH to recovery init.rc

--- a/recovery/root/init.rc
+++ b/recovery/root/init.rc
@@ -16,6 +16,7 @@ on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
+    export LD_LIBRARY_PATH .:/sbin
 
     symlink /system/etc /etc
 
