configs: Fix-up media codecs

--- a/configs/mtk_omx_core.cfg
+++ b/configs/mtk_omx_core.cfg
@@ -1,6 +1,8 @@
 OMX.MTK.VIDEO.DECODER.H263  video_decoder.h263  libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.MPEG4 video_decoder.mpeg4 libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.AVC   video_decoder.avc   libMtkOmxVdec.so
+OMX.MTK.VIDEO.DECODER.HEVC   video_decoder.hevc   libMtkOmxVdec.so
+OMX.MTK.VIDEO.DECODER.HEVC.secure   video_decoder.hevc   libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.VPX   video_decoder.vpx   libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.AVC.secure   video_decoder.avc   libMtkOmxVdec.so
 OMX.MTK.VIDEO.ENCODER.AVC   video_encoder.avc   libMtkOmxVenc.so
@@ -18,4 +20,3 @@ OMX.MTK.AUDIO.ENCODER.AMR   audio_encoder.amrnb libMtkOmxAmrEnc.so
 OMX.MTK.AUDIO.ENCODER.AWB   audio_encoder.amrwb libMtkOmxAwbEnc.so
 OMX.MTK.AUDIO.ENCODER.AAC   audio_encoder.aac   libMtkOmxAacEnc.so
 OMX.MTK.AUDIO.DECODER.VORBIS audio_decoder.vorbis libMtkOmxVorbisDec.so
-OMX.MTK.VIDEO.DECODER.HEVC    video_decoder.hevc    libMtkOmxVdec.so
