--- a/rootdir/init.mt8127.rc
+++ b/rootdir/init.mt8127.rc
@@ -5,6 +5,8 @@ on early-init
     # mount debugfs for ftrace
     mount debugfs none /sys/kernel/debug
 
+    symlink /data/tombstones /tombstones
+
 on init
     # See storage config details at http://source.android.com/tech/storage/
     # fix non-shell uid process can not access shared-sd
