--- a/rootdir/init.mt8127.rc
+++ b/rootdir/init.mt8127.rc
@@ -1,4 +1,3 @@
-import init.project.rc
 import init.mt8127.usb.rc
 
 on early-init
@@ -196,7 +195,14 @@ on fs
     mount_all /fstab.mt8127
     write /proc/bootprof "INIT:eMMC:Mount_END"
     setprop ro.crypto.fuse_sdcard true
-    
+
+on post-fs
+    # Turn on swap
+    swapon_all /fstab.mt8127
+
+    # Swap in only 1 page at a time
+    write /proc/sys/vm/page-cluster 0
+
 on post-fs-data
     mkdir /data/nvram 2771 root system
     mkdir /data/media 0770 media_rw media_rw
@@ -213,6 +219,12 @@ on post-fs-data
     
 	# GPS
     mkdir /data/gps_mnl 0771 gps system
+    chown gps gps /sys/class/gpsdrv/gps/pwrctl
+    chown gps gps /sys/class/gpsdrv/gps/suspend
+    chown gps gps /sys/class/gpsdrv/gps/state
+    chown gps gps /sys/class/gpsdrv/gps/pwrsave
+    chown gps gps /sys/class/gpsdrv/gps/status
+    chmod 0660 /dev/stpgps
     
 	# remove /data/system/wpa_supplicant which was created in meta mode of JB version, 
 	# wlan will be not able to enabled if this directory exists in L version.
@@ -225,6 +237,22 @@ on post-fs-data
     mkdir /data/@btmtk 0770 bluetooth net_bt
     chown bluetooth bluetooth /dev/hid-keyboard
     chmod 0660 /dev/hid-keyboard
+    chmod 0660 /dev/ttyMT2
+    chown system system /dev/ttyMT2
+
+    # Char device for BT 3.0 HS
+    mknod /dev/ampc0 c 151 0
+    chown bluetooth bluetooth /dev/ampc0
+    chmod 0660 /dev/ampc0
+
+    # wifi
+    mknod /dev/wmtWifi c 153 0
+    chmod 0660 /dev/wmtWifi
+    chown system system /dev/wmtWifi
+    mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/wpa_supplicant 0770 wifi wifi 
+    chown wifi wifi /data/misc/wifi
 
     # NFC
     mkdir /data/nfc_socket 0771 nfc radio
@@ -242,6 +270,14 @@ on post-fs-data
 
     # HDMI
     chmod 0664 /dev/hdmitx
+
+    # FM Radio device node
+    chmod 0660 /dev/fm
+    chown system media /dev/fm
+
+    # Volume key swapping based on rotation orientation
+    chmod 0640 /dev/mtk-kpd
+    chown root audio /dev/mtk-kpd
 
     # Sensor
     chmod 0660 /dev/hwmsensor
@@ -426,6 +462,10 @@ on boot
 
     chown system system /sys/devices/system/cpu/cpufreq/hotplug/cpu_num_base
     chmod 0660 /sys/devices/system/cpu/cpufreq/hotplug/cpu_num_base
+
+    export SECONDARY_STORAGE_USB /storage/usbotg
+
+    insmod /system/lib/modules/ufsd.ko
 
 on charger
     mount ext4 /dev/block/platform/mtk-msdc.0/by-name/system /system ro wait
