--- a/configs/mtk_omx_core.cfg
+++ b/configs/mtk_omx_core.cfg
@@ -1,11 +1,12 @@
 OMX.MTK.VIDEO.DECODER.H263  video_decoder.h263  libMtkOmxVdec.so
+OMX.MTK.VIDEO.DECODER.MPEG2  video_decoder.mpeg2  libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.MPEG4 video_decoder.mpeg4 libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.AVC   video_decoder.avc   libMtkOmxVdec.so
-OMX.MTK.VIDEO.DECODER.HEVC   video_decoder.hevc   libMtkOmxVdec.so
-OMX.MTK.VIDEO.DECODER.HEVC.secure   video_decoder.hevc   libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.VPX   video_decoder.vpx   libMtkOmxVdec.so
 OMX.MTK.VIDEO.DECODER.AVC.secure   video_decoder.avc   libMtkOmxVdec.so
 OMX.MTK.VIDEO.ENCODER.AVC   video_encoder.avc   libMtkOmxVenc.so
+OMX.MTK.VIDEO.DECODER.HEVC.secure   video_decoder.hevc   libMtkOmxVdec.so
+OMX.MTK.VIDEO.DECODER.HEVC  video_decoder.hevc  libMtkOmxVdec.so
 OMX.MTK.VIDEO.ENCODER.H263  video_encoder.h263  libMtkOmxVenc.so
 AIV.play AIV.play.101 libMtkOmxAIVPlayer.so
 AIV.play.avcddp play.avcddp libMtkOmxAIVPlayer.so
