tank: kernel import init.base.rc

--- a/rootdir/init.mt8127.rc
+++ b/rootdir/init.mt8127.rc
@@ -8,6 +8,7 @@ import init.aee.rc
 import init.ssd.rc
 import init.no_ssd.rc
 import init.ssd_nomuser.rc
+import init.base.rc
    
 on init
     export USBOTG_STORAGE /storage/usbotg
