tank: chmod 666 ion_mm_heap

--- a/rootdir/init.mt8127.rc
+++ b/rootdir/init.mt8127.rc
@@ -171,6 +171,7 @@ on init
 
 # Memtrack alignment between FOS devices
     chown system system /d/ion/heaps/ion_mm_heap
+    chmod 0666 /d/ion/heaps/ion_mm_heap
 
 on boot
 # start sensor services
