--- a/rootdir/init.project.rc
+++ b/rootdir/init.project.rc
@@ -217,6 +217,7 @@ on property:sys.boot_completed=1
     write /sys/kernel/mm/ksm/sleep_millisecs 700
     write /sys/kernel/mm/ksm/run 1
     start bootinfo
+    setprop net.hostname tank
 
 on property:debug.log.thermal_qa.enable=y
 	start thermal_qa
