--- a/rootdir/init.mt8127.rc
+++ b/rootdir/init.mt8127.rc
@@ -14,8 +14,9 @@ on init
     mount tmpfs tmpfs /mnt/media_rw/ mode=0755,uid=1000,gid=1000
     mkdir /mnt/media_rw/usbotg 0700 media_rw media_rw
     mkdir /storage/usbotg 0700 root root
-    export LD_SHIM_LIBS "/system/vendor/lib/libasp.so|libshim_asp.so"
-    export LD_PRELOAD libshim_asp.so
+
+    # Preload the shim for amazon metrics logging
+    export LD_PRELOAD "libshim_asp.so"
 
 # Backward compatibility
     symlink /system/etc /etc
